// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComponentState Snapshot ComponentState component 1`] = `<View />`;

exports[`ComponentState Snapshot ComponentState component with description 1`] = `
<View>
  <Text>
    This is just for test
  </Text>
</View>
`;

exports[`ComponentState Snapshot ComponentState component with description and image 1`] = `
<View>
  <Image
    source={
      Object {
        "uri": "https://facebook.github.io/react-native/docs/assets/favicon.png",
      }
    }
    style={
      Object {
        "height": 50,
        "width": 50,
      }
    }
  />
  <Text>
    This is just for test
  </Text>
</View>
`;
